--- a/BlogPost.html
+++ b/BlogPost.html
@@ -98,6 +98,7 @@ libraries but differs from .int and .gnat files, where each file corresponds to 
 single COBOL program.
     </div>
 </div>
+    <button><a href="index.html">Go back</a></button>
 </body>
 
 </html>
