--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
        
         </div>
        </div>
-    <a href="BlogPost.html">Blog Post</a>
+    <button><a href="BlogPost.html">Blog Post</a></button>
        <script src="script.js"></script>
     </body>
     
