--- a/BlogPost.html
+++ b/BlogPost.html
@@ -20,7 +20,7 @@
     <div class="biggerDiv">
         <div class="first-div me">
             <fieldset>
-                <legend>How does each OS organize files and folders?</legend>
+                <legend>How does each OS organize files?</legend>
                 1. Windows
                 - It orgainizes files and folders in a hierarchical e.g C:/ndima mhangwani/Desktop
                 <br>
@@ -98,7 +98,7 @@ libraries but differs from .int and .gnat files, where each file corresponds to 
 single COBOL program.
     </div>
 </div>
-    <button><a href="index.html">Go back</a></button>
+<button><a href="index.html">Go back</a></button>
 </body>
 
 </html>
